--- a/HSPA/Frontend/src/app/property/property-card/property-card.component.html
+++ b/HSPA/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,9 +1,11 @@
   <div class="card shadow-lg" style="width: 18rem;">
-    <img src="assets/images/House.jpeg" class="card-img-top" alt="...">
+    <div class="img-wrapper">
+      <img src="assets/images/House.jpeg" class="card-img-top" alt="...">
+    </div>
     <div class="card-body">
-      <h5 class="card-title">{{Property.Name}}</h5>
-      <p class="card-text">{{Property.Description}}</p>
-      <p class="card-text">Property Type: {{Property.Type}} <br/>Price: {{Property.Price | currency:'INR'}}</p>
+      <h5 class="card-title">{{property.Name}}</h5>
+      <p class="card-text">{{property.Description}}</p>
+      <p class="card-text">Property Type: {{property.Type}} <br/>Price: {{property.Price | currency:'INR'}}</p>
       <a href="#" class="btn btn-primary">View Details</a>&nbsp;  <a href="#" class="btn btn-primary">Purchase</a>
     </div>
   </div>
