--- a/HSPA/Frontend/src/app/user/user-register/user-register.component.html
+++ b/HSPA/Frontend/src/app/user/user-register/user-register.component.html
@@ -1,1 +1,64 @@
-<p>user-register works!</p>
+<div class="row">
+  <div class="col-6 m-auto">
+  <div class="card m-auto">
+    <div class="card-header">
+      Register
+    </div>
+    <div class="card-body">
+      <form [formGroup]="registerationForm" (ngSubmit)="onSubmit()">
+        <div class="form-group col-12">
+            <label for="fullname" class="form-label">Name</label>
+            <input type="text" class="form-control" formControlName="fullname" />
+            <span *ngIf="!fullname?.valid && fullname?.touched" class="error-block">
+              <span *ngIf="fullname.hasError('required')">Please provide name!</span>
+              <span *ngIf="fullname.hasError('minlength')">Name should be atleast 4 character long!</span>
+              <span *ngIf="fullname.hasError('maxlength')">Name should be less than 20 characters!</span>
+            </span>
+        </div>
+
+        <div class="form-group col-12">
+          <label for="email" class="form-label">Email</label>
+          <input type="text" class="form-control" formControlName="email" />
+          <span *ngIf="!email?.valid && email?.touched" class="error-block">
+            <span *ngIf="email.hasError('required')">Please provide email id!</span>
+            <span *ngIf="email.hasError('email')">Please provide valid email id!</span>
+          </span>
+        </div>
+
+        <div class="form-group col-12">
+          <label for="passwrod" class="form-label">Password</label>
+          <input type="password" class="form-control" formControlName="password" />
+          <span *ngIf="!password?.valid && password?.touched" class="error-block">
+            <span *ngIf="password.errors?.['required']">Please provide password!</span>
+            <span *ngIf="password.errors?.['minlength']">Password should not be lesser than 8 character!</span>
+          </span>
+        </div>
+
+        <div class="form-group col-12">
+          <label for="confirmPassword" class="form-label">Confirm Password</label>
+          <input type="password" class="form-control" formControlName="confirmPassword" />
+          <span *ngIf="!confirmPassword?.valid && confirmPassword?.touched" class="error-block">
+            <span *ngIf="confirmPassword.hasError('required')">Please provide confirm password!</span>
+          </span>
+            <span *ngIf="registerationForm.hasError('notMatching')" class="error-block">Password not matched!</span>
+        </div>
+
+        <div class="form-group col-12">
+          <label for="mobile" class="form-label">Mobile</label>
+          <input type="text" class="form-control" formControlName="mobile" />
+          <span *ngIf="!mobile?.valid && mobile?.touched" class="error-block">
+            <span *ngIf="mobile.errors?.['required']">Please provide mobile!</span>
+          </span>
+        </div>
+        <div></div>
+        <div class="form-group col-12">
+          <button type="submit" [disabled]="!registerationForm.valid" class="btn btn-primary">Save</button>&nbsp;
+          <button type="reset" class="btn btn-secondary ml-2">Cancel</button>
+        </div>
+        Form Values: {{registerationForm.value | json}} <br/>
+        Form Status: {{registerationForm.valid}}
+      </form>
+    </div>
+  </div>
+  </div>
+</div>
