--- a/HSPA/Frontend/src/app/user/user-login/user-login.component.html
+++ b/HSPA/Frontend/src/app/user/user-login/user-login.component.html
@@ -1,1 +1,27 @@
-<p>user-login works!</p>
+<div class="row">
+  <div class="col-6 m-auto">
+  <div class="card m-auto">
+    <div class="card-header">
+      User Login
+    </div>
+    <div class="card-body">
+      <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
+        <div class="form-group col-12">
+          <label for="email" class="form-label">Username</label>
+          <input type="text" class="form-control" required ngModel name="email" />
+        </div>
+
+        <div class="form-group col-12">
+          <label for="passwrod" class="form-label">Password</label>
+          <input type="password" class="form-control" required ngModel name="password" />
+        </div>
+        <div></div>
+        <div class="form-group col-12">
+          <button [disabled]="!loginForm.valid" type="submit" class="btn btn-primary">Login</button>&nbsp;
+          <button type="reset" class="btn btn-secondary ml-2">Cancel</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  </div>
+</div>
