--- a/HSPA/Frontend/src/app/property/add-property/add-property.component.html
+++ b/HSPA/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,147 +1,307 @@
-<div class="row">
-  <div class="col-8">
+<div class="row mb-5">
+  <div class="col-8 shadow-lg p-0 bg-white">
     <div class="card">
       <div class="card-header">
         <h3>List your Property</h3>
       </div>
       <div class="card-body">
-        <form (ngSubmit)='onSubmit()' #Form="ngForm">
-          <div>
-            <tabset #formTabs>
-              <tab heading="Basic Info" (click)="selectTab(0)">
-                  <div class="form-group col-12 mt-3">
-                    <span>Purpose to list property<br/></span>
-                    <input type="radio" id="sell" value="1" name="SellRent">
-                    <label class="m-2">Sell</label>
-                    <input type="radio" id="rent" value="2" name="SellRent">
-                    <label class="m-2">Rent</label>
-                  </div>
-                    <div class="form-group col-12">
-                      <label>Name</label>
-                      <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" required minlength="5">
-                      <span *ngIf="!propName.valid && propName.touched" class="error-block">
-                        <span *ngIf="propName.errors?.['required']">Please provide name</span>
-                        <span *ngIf="propName.errors?.['minlength']">Name must be atleast 5 char long</span>
-                      </span>
-                    </div>
-                    <div class="form-group col-12">
-                      <label>Type</label>
-                      <input type="text" class="form-control" ngModel name="Type">
-                    </div>
-                    <div class="form-group col-12">
-                      <label>Price</label>
-                      <input type="text" class="form-control" ngModel name="Price">
-                    </div>
-              </tab>
-              <tab heading="Pricing & Area" (click)="selectTab(1)">
+        <form (ngSubmit)='onSubmit()' [formGroup]="addPropertyForm">
+          <div class="tab-panel">
+            <tabset class="member-tabset" #formTabs>
+              <tab heading="Basic Info" formGroupName="BasicInfo" >
                 <div class="form-group col-12 mt-3">
-                  <label>Price (in USD)</label>
-                  <input type="text" class="form-control">
+                  <p>I want to</p>
+                  <div class="btn-group" btnRadioGroup formControlName="SellRent">
+                    <label class="btn btn-outline-primary mr-2"
+                    btnRadio="1" tabindex="0" role="button" name="SellRent">Sell</label>
+                    <label class="btn btn-outline-primary"
+                    btnRadio="2" tabindex="0" role="button" name="SellRent">Rent</label>
+                  </div>
+                  <div class="error-block" *ngIf="SellRent.invalid && nextClicked">
+                    Please select sell or rent!
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
-                  <label>Security (in USD)</label>
-                  <input type="text" class="form-control">
+                  <p>BHK</p>
+                  <div class="btn-group" btnRadioGroup formControlName="BHK">
+                    <label class="btn btn-outline-primary mr-2" btnRadio="1" tabindex="1" role="button" name="BHK">1</label>
+                    <label class="btn btn-outline-primary mr-2" btnRadio="2" tabindex="1" role="button" name="BHK">2</label>
+                    <label class="btn btn-outline-primary mr-2" btnRadio="3" tabindex="1" role="button" name="BHK">3</label>
+                    <label class="btn btn-outline-primary mr-2" btnRadio="4" tabindex="1" role="button" name="BHK">4</label>
+                  </div>
+                  <div class="error-block" *ngIf="BHK.invalid && nextClicked">
+                    Please select BHK!
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
-                  <label>Maintenance (in USD)</label>
-                  <input type="text" class="form-control">
+                  <p>Property Type</p>
+                  <div class="btn-group" btnRadioGroup formControlName='PType'>
+                    <label class="btn btn-outline-primary mr-2" btnRadio="1" tabindex="2" role="button" name="PropType">House</label>
+                    <label class="btn btn-outline-primary mr-2" btnRadio="2" tabindex="2" role="button" name="PropType">Apartment</label>
+                    <label class="btn btn-outline-primary mr-2" btnRadio="3" tabindex="2" role="button" name="PropType">Duplex</label>
+                  </div>
+                  <div class="error-block" *ngIf="PType.invalid && nextClicked">
+                    Please select property type!
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
-                  <label>Built Area (in Sqr Feet)</label>
-                  <input type="text" class="form-control">
+                  <p>Furnishing Types</p>
+                  <div class="btn-group" btnRadioGroup
+                  formControlName="FType">
+                  <label
+                    *ngFor="let ftype of furnishTypes"
+                    class="btn btn-outline-primary mr-2"
+                    [btnRadio]="ftype" tabindex="0" role="button"
+                    name="FurnishType">
+                    {{ftype}}
+                  </label>
+                  </div>
+                  <div class="error-block" *ngIf="FType.invalid && nextClicked">
+                    Please select furnishing type!
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
-                  <label>Carpet Area(in Sqr Feet)</label>
-                  <input type="text" class="form-control">
+                  <label>in Building/Society/Project</label>
+                  <input type="text" class="form-control" #propName
+                  formControlName="Name">
+
+                  <div class="error-block"
+                  *ngIf="Name.invalid && (nextClicked || Name.touched)">
+                    Please select building, society or project name!
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label>City</label>
+                  <select class="form-control"
+                  formControlName="City">
+                    <option value=''>--Select City--</option>
+                    <option *ngFor="let city of cityList" value={{city}}>
+                      {{city}}
+                    </option>
+                  </select>
+                  <div class="error-block"
+                  *ngIf="City.invalid && (nextClicked || City.touched)">
+                    Please select city!
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                    <button type="button"
+                    class="btn btn-primary btn-block"
+                    (click)="selectTab(1, BasicInfo.valid)">Next</button>
                 </div>
               </tab>
-              <tab heading="Address" (click)="selectTab(2)">
+
+              <tab heading="Pricing and Area" formGroupName="PriceInfo">
+                  <div class="form-group col-12 mt-3">
+                    <label *ngIf="SellRent.value==1">Price (in Rs.)</label>
+                    <label *ngIf="SellRent.value==2">Rent (in Rs.)</label>
+                    <input type="text" class="form-control"
+                    formControlName="Price">
+
+                    <div class="error-block"
+                    *ngIf="Price.invalid && (nextClicked || Price.touched)">
+                      Please select
+                      <span *ngIf="SellRent.value==1;else ShowRent">price!</span>
+                      <ng-template #ShowRent>rent!</ng-template>
+                    </div>
+                  </div>
+
+                  <div *ngIf="SellRent.value==2">
+                    <div class="form-group col-12">
+                      <label>Security (in Rs.)</label>
+                      <input type="text"
+                      formControlName="Security"
+                      class="form-control">
+                    </div>
+
+                    <div class="form-group col-12">
+                      <label>Maintenance (in Rs.)</label>
+                      <input type="text"
+                      formControlName="Maintenance"
+                      class="form-control">
+                    </div>
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Built Area (in Sqr Feet)</label>
+                    <input type="text"
+                    class="form-control"
+                    formControlName="BuiltArea">
+                    <div class="error-block"
+                    *ngIf="BuiltArea.invalid && nextClicked">
+                      Please select built up area!
+                    </div>
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Carpet Area (in Sqr Feet)</label>
+                    <input type="text"
+                    formControlName="CarpetArea"
+                    class="form-control">
+                  </div>
+
+                  <div class="form-group col-12">
+                    <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(2, PriceInfo.valid)">Next</button>
+                    &nbsp;
+                    <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(0, PriceInfo.valid)">Back</button>
+                  </div>
+              </tab>
+
+              <tab heading="Address" formGroupName="AddressInfo">
+
                 <div class="form-group col-12 mt-3">
                   <label>Floor</label>
-                  <input type="text" class="form-control">
+                  <input type="text"
+                  formControlName="FloorNo"
+                  class="form-control">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Total Floor</label>
-                  <input type="text" class="form-control">
+                  <input type="text"
+                  formControlName="TotalFloor"
+                  class="form-control">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Address</label>
-                  <input type="text" class="form-control">
+                  <input type="text"
+                  class="form-control"
+                  formControlName="Address">
+                  <div class="error-block" *ngIf="Address.invalid && (nextClicked || Address.touched)">
+                    Please select address!
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
                   <label>Landmark</label>
-                  <input type="text" class="form-control">
+                  <input type="text"
+                  formControlName="LandMark"
+                  class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <button type="button" class="btn btn-primary btn-block"
+                  (click)="selectTab(3, AddressInfo.valid)">Next</button>
+                  &nbsp;
+                  <button type="button" class="btn btn-primary btn-block"
+                  (click)="selectTab(1, AddressInfo.valid)">Back</button>
                 </div>
               </tab>
-              <tab heading="Other Details" (click)="selectTab(3)">
-                <div class="form-group col-12 mt-3">
-                  <label>Ready to Move</label><br/>
-                  <input type="radio" id='Yes' value='1' name="RTM">
-                  <label class="m-2">Yes</label>
 
-                  <input type="radio" id="No" value='2' name="RTM">
-                  <label class="m-2">No</label>
+              <tab heading="Other Details" formGroupName="OtherInfo">
+                <div class="form-group col-12">
+                  <p>Ready to Move</p>
+                  <div class="btn-group" btnRadioGroup
+                  formControlName="RTM">
+                    <label class="btn btn-outline-primary mr-2"
+                      btnRadio=true tabindex="0" role="button"
+                      name="RTM">Yes
+                    </label>
+
+                    <label class="btn btn-outline-primary"
+                      btnRadio=false  tabindex="0" role="button"
+                      name="RTM">No
+                    </label>
+                  </div>
+                  <div class="error-block" *ngIf="RTM.invalid && nextClicked">
+                    Please select ready to move!
+                  </div>
                 </div>
 
-                <div class="form-group col-3">
-                  <label>Possession/Avaialble From</label>
-                  <input type="date" class="form-control">
+                <div class="form-group col-6">
+                  <label *ngIf="property.RTM">Establishment Date</label>
+                  <label *ngIf="!property.RTM">Possession Date</label>
+                  <input type="text"
+                  class="form-control"
+                  formControlName="PossessionOn"
+                  bsDatepicker
+                  [bsConfig]="{containerClass: 'theme-dark-blue',
+                  dateInputFormat: 'MMM DD, YYYY'}">
+                  <!-- <div class="error-block" *ngIf="PossessionOn.invalid
+                    && (nextClicked || PossessionOn.touched)">
+                    Please select establishment/possession date
+                  </div> -->
                 </div>
 
                 <div class="form-group col-12">
-                  <label>Age of Property</label>
-                  <input type="text" class="form-control">
+                  <p>Gated Community</p>
+                  <div class="btn-group"
+                  btnRadioGroup
+                  formControlName="Gated">
+                    <label class="btn btn-outline-primary mr-2"
+                    btnRadio=true tabindex="0" role="button" name="Gated">Yes</label>
+                    <label class="btn btn-outline-primary"
+                    btnRadio=false  tabindex="0" role="button" name="Gated">No</label>
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
-                  <label>Gated Community</label>
-                  <input type="text" class="form-control">
-                </div>
-
-                <div class="form-group col-12">
-                  <label>Main Entrance</label>
-                  <input type="text" class="form-control">
+                  <p>Main Entrance</p>
+                  <div class="btn-group" btnRadioGroup
+                  formControlName="MainEntrance">
+                    <label class="btn btn-outline-primary mr-2"
+                    btnRadio=East tabindex="0" role="button" name="Entrance">East</label>
+                    <label class="btn btn-outline-primary"
+                    btnRadio=West  tabindex="0" role="button" name="Entrance">West</label>
+                    <label class="btn btn-outline-primary"
+                    btnRadio=South  tabindex="0" role="button" name="Entrance">South</label>
+                    <label class="btn btn-outline-primary"
+                    btnRadio=North  tabindex="0" role="button" name="Entrance">North</label>
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
                   <label>Description</label>
-                  <textarea type="text" class="form-control" rows="3"></textarea>
+                  <textarea type="text"
+                  class="form-control"
+                  formControlName="Description"
+                  rows="6"></textarea>
+                </div>
+
+                <div class="form-group col-12">
+                    <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(4, OtherInfo.valid)">Next</button>
+                    &nbsp;
+                    <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(2, OtherInfo.valid)">Back</button>
                 </div>
               </tab>
-              <tab heading="Photos" (click)="selectTab(4)">
-                <div class="form-group col-12 mt-3">
+
+              <tab heading="Photos">
+                <div class="form-group col-12">
                   <div class="photo-control">
-                      <button class="mt-3" type="button">Upload</button> <br>
+                      <button class="mt-5" type="button">Upload</button> <br>
                       This is under construction
                   </div>
+                </div>
+                <div class="form-group col-12">
+                  <button type="button" class="btn btn-primary btn-block"
+                  (click)="selectTab(3, true)">Back</button>&nbsp;
+                  <button type="submit" class="btn btn-primary btn-block">Save</button>&nbsp;
+                  <button type="reset" class="btn btn-primary btn-block">Cancel</button>
                 </div>
               </tab>
             </tabset>
           </div>
-          <div class="form-group col-12">
-            <button type="button" [disabled]="currentTabId <= 0" class="btn btn-primary mt-3 mr-2" (click)="selectPrevTab()">Previous</button>&nbsp;
-            <button type="button" [disabled]="currentTabId >= 4" class="btn btn-primary mt-3 mr-2" (click)="selectNextTab()">Next</button>
-          </div>
         </form>
       </div>
-    </div>
+  </div>
   </div>
   <div class="col-4">
-    <div class="card">
-      <div class="card-header">
-        <h3>Your Property Preview</h3>
-      </div>
-      <div class="card-body">
-      </div>
+    <div class="card-header">
+      <h3>Your Property Preview</h3>
     </div>
-
+    <div class="shadow-lg p-3 bg-white">
+      <app-add-property-preview [property]="property"></app-add-property-preview>
+    </div>
   </div>
 </div>
-
