--- a/HSPA/Frontend/src/assets/form.css
+++ b/HSPA/Frontend/src/assets/form.css
@@ -10,3 +10,15 @@ div.form-group
 .error-block{
   color: red;
 }
+
+.btn-group > label[ng-reflect-btn-radio] {
+  border-radius: 44px;
+  padding: 0 15px;
+  line-height: 30px;
+}
+
+.card-title {
+  color: #0069d9;
+}
+
+
